--- a/demos/deploySolution/index.html
+++ b/demos/deploySolution/index.html
@@ -319,7 +319,7 @@
           const progressFcn =
             function (percentDone, jobId, progressEvent) {
               if (progressEvent) {
-                createdItems.push(progressEvent.data)
+                createdItems.push(progressEvent.data);
               }
               let html = "Deploying " + jobId + "..." + percentDone.toFixed().toString() + "%" + "<br><br>Finished items:<ol>";
               createdItems.forEach(function (item) { return html += "<li>" + item + "</li>" });
